dons de class 08

--- a/data/feats/class-08-16MOW7deoOoDwE9z.htm
+++ b/data/feats/class-08-16MOW7deoOoDwE9z.htm
@@ -2,14 +2,12 @@ Name: Hazard Finder
 Nom: Dénicheur de dangers
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You have an intuitive ability to sense hazards.
-Avantage: Vous avez une capacité intuitive à détecter les dangers.
------- Benefits and spoiler ----
-Avantage: Vous avez une capacité intuitive à détecter les dangers.
+Avantage: Vous détectez les pièges et les dangers plus facilement sans même avoir à les chercher.
+
 ------ Description (en) ------
 <p>You have an intuitive ability to sense hazards. You gain a +1 circumstance bonus to Perception checks to find traps and hazards, to AC against their attacks, and to saves against their effects. You can find hazards that would normally require you to @Compendium[pf2e.actionspf2e.TiNDYUGlMmxzxBYU]{Search} even if you aren't Searching.</p>
 ------ Description (fr) ------
