--- a/data/feats/class-08-27R8yZcY2uXH6pZN.htm
+++ b/data/feats/class-08-27R8yZcY2uXH6pZN.htm
@@ -6,7 +6,7 @@ PrereqFR: maître en Artisanat|Spécialiste des pièges artisanaux
 
 ------ Benefits and spoiler ----
 Benefits: Your snares are particularly dif cult for enemies to avoid.
-Avantage: Vos pièges sont particulièrement difficiles à éviter pour les ennemis.
+Avantage: Vous pouvez appliquer votre DD de classe à vos pièges artisanaux.
 
 ------ Description (en) ------
 <p>Your snares are particularly difficult for enemies to avoid. When you set a snare, the saving throw DC for that snare is equal to its normal DC or your class DC, whichever is higher.</p>
