--- a/data/feats/class-08-9pTQrhbeF348bYky.htm
+++ b/data/feats/class-08-9pTQrhbeF348bYky.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You quickly advise your ally, using your earlier planning to make sure luck can't throw a wrench in the cogs of your schemes.
-Avantage: Vous conseillez rapidement votre allié, en utilisant votre planification antérieure pour vous assurer que la chance ne peut pas mettre un frein aux rouages de vos plans.
+Avantage: Une fois par jour chacun, vos alliés gardent le meilleur de deux tests de compétence ou d'attaque.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> One of the required allies is about to attempt an attack roll or skill check.</p>
@@ -15,8 +15,8 @@ Avantage: Vous conseillez rapidement votre allié, en utilisant votre planificat
 <p>You quickly advise your ally, using your earlier planning to make sure luck can't throw a wrench in the cogs of your schemes.</p>
 <p>The ally rolls the triggering check twice and takes the better of the two results. That ally then becomes temporarily immune to your Inspired Stratagem until your next daily preparations.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Un des alliés requis est en train de tenter un jet d'attaque ou un test de compétence.</p>
-<p><strong>Conditions</strong> Vous passez 10 minutes au cours de vos préparatifs quotidiens à réviser des stratagèmes avec quatre alliés au maximum.</p>
+<p><strong>Déclencheur</strong> Un des alliés requis va tenter un jet d'attaque ou un test de compétence.</p>
+<p><strong>Conditions</strong> Vous avez passé 10 minutes au cours de vos préparatifs quotidiens à réviser des stratagèmes avec quatre alliés au maximum pour la journée d'aventure.</p>
 <hr />
-<p>Vous conseillez rapidement votre allié, en utilisant votre précédente planification pour être certain que la chance ne puisse venir jeter un grain de sable inattendu dans vos prévisions.</p>
+<p>Vous conseillez rapidement votre allié, en utilisant le stratagème que vous avez planifié pour être certain que la chance ne puisse venir jeter un grain de sable inattendu dans vos prévisions.</p>
 <p>L'allié lance le test déclencheur deux fois et garde le meilleur des deux résultats. Cet allié devient temporairement immunisé à votre Stratagème inspiré jusqu'à vos prochains préparatifs quotidiens.</p>
