--- a/data/feats/class-08-AbgHCPWOKULeXrJ2.htm
+++ b/data/feats/class-08-AbgHCPWOKULeXrJ2.htm
@@ -6,9 +6,9 @@ PrereqFR: attaque sournoise
 
 ------ Benefits and spoiler ----
 Benefits: Your attacks deal more damage, even against creatures that aren’t flat-footed.
-Avantage: Vos attaques font plus de dégâts, même contre les créatures qui n'ont pas les pieds plats.
+Avantage: Vous appliquez des dégâts de précision supplémentaires aux créatures que vous Frappez.
 
 ------ Description (en) ------
 <p>Your attacks deal more damage, even against creatures that aren't flat-footed. When you succeed or critically succeed at a Strike against a creature that isn't flat-footed, you also deal 1d6 precision damage. This applies only if you're using a weapon or unarmed attack you could deal sneak attack damage with. At 14th level, if you would normally deal 3d6 or more sneak attack damage to flat-footed creatures, you deal 2d6 precision damage to creatures that aren't flat-footed.</p>
 ------ Description (fr) ------
-<p>Vos attaques infligent plus de dégâts, même contre les créatures qui ne sont pas prises au dépourvu. Quand vous obtenez un succès ou un succès critique en Frappant une créature qui n’est pas Prise au dépourvu, vous lui infligez également 1d6 dégâts de précision. Cela n’est valable que si vous utilisez une arme ou une attaque à mains nues avec laquelle vous pourriez porter une attaque sournoise. À partir du niveau 14, si vous infligez normalement 3d6 dégâts d’attaque sournoise ou plus aux créatures prises au dépourvu, vous infligez alors 2d6 dégâts de précision aux créatures qui ne sont pas prises au dépourvu.</p>
+<p>Vos attaques infligent plus de dégâts, même contre les créatures qui ne sont pas Prises au dépourvu. Quand vous obtenez un succès ou un succès critique en Frappant une créature qui n’est pas Prise au dépourvu, vous lui infligez également 1d6 dégâts de précision. Cela n’est valable que si vous utilisez une arme ou une attaque à mains nues avec laquelle vous pourriez porter une attaque sournoise. À partir du niveau 14, si vous infligez normalement 3d6 dégâts d’attaque sournoise ou plus aux créatures prises au dépourvu, vous infligez alors 2d6 dégâts de précision aux créatures qui ne sont pas prises au dépourvu.</p>
