--- a/data/equipment/consumable-05-xAEbIQTNonVjCg38.htm
+++ b/data/equipment/consumable-05-xAEbIQTNonVjCg38.htm
@@ -10,9 +10,9 @@ Nom: Bouton huileux
 <hr />
 <p>A thin sheen of slick oil covers this gaudy button. When you activate the oily button, your attempts to @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Disarm} your opponent of an item before the start of the opponent's next turn gain a +4 circumstance bonus instead of +2, and the -2 circumstance penalty to attacks with the item or other checks requiring a firm grasp on the item lasts until the end of its next turn or until it uses an @Compendium[pf2e.actionspf2e.pvQ5rY2zrtPI614F]{Interact} action to adjust its grip.</p>
 ------ Description (fr) ------
-<p><strong>Usage</strong> Apposé sur une armure</p>
+<p><strong>Utilisation</strong> Fixé sur une armure</p>
 <p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
-<p><strong>Déclencheur</strong> Vous réussissez un test d'Athlétisme pour désarmer.</p>
+<p><strong>Déclencheur</strong> Vous réussissez un test d'Athlétisme pour désarmer</p>
 <p><strong>Prérequis</strong> Vous êtes un expert en Athlétisme.</p>
 <hr />
-<p>Une fine couche d'huile recouvre ce bouton criard. Lorsque vous activez le Bouton huileux, vos tentatives de @Compendium[pf2e.actionspf2e. Dt6B1slsBy8ipJu9]{Désarmer} votre adversaire d'un objet avant le début du prochain tour de l'adversaire bénéficient d'un bonus de circonstance de +4 au lieu de +2, et la pénalité de circonstance de -2 aux attaques avec l'objet ou aux autres tests nécessitant une prise ferme sur l'objet dure jusqu'à la fin de son prochain tour ou jusqu'à ce qu'il utilise l'action @Compendium[pf2e. actionspf2e.pvQ5rY2zrtPI614F]{Interagir} pour ajuster sa prise.</p>
+<p>Une fine couche d'huile recouvre ce bouton criard. Lorsque vous activez le Bouton huileux, vos tentatives de @Compendium[pf2e.actionspf2e. Dt6B1slsBy8ipJu9]{Désarmer} votre adversaire d'un objet avant le début du prochain tour de l'adversaire, bénéficient d'un bonus de circonstance de +4 au lieu de +2, et la pénalité de circonstance de -2 aux attaques avec l'objet ou aux autres tests nécessitant une prise ferme sur l'objet dure jusqu'à la fin de son prochain tour ou jusqu'à ce qu'il utilise l'action @Compendium[pf2e. actionspf2e.pvQ5rY2zrtPI614F]{Interagir} pour ajuster sa prise.</p>
