--- a/data/equipment/consumable-06-ROdjFw7wby982qf5.htm
+++ b/data/equipment/consumable-06-ROdjFw7wby982qf5.htm
@@ -16,5 +16,5 @@ Nom: Munition terrifiante
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} 1.</p>
-<p><strong>Failure</strong> La créature est effrayée 1 et ne peut pas réduire sa valeur d'effroi en dessous de 1 jusqu'à ce qu'elle dépense une action, qui a le trait de concentration, pour se calmer.</p>
-<p><strong>Échec critique</strong> Comme un échec, mais la créature est effrayée 2.</p>
+<p><strong>Échec</strong> La créature est Éffrayée 1 et ne peut pas réduire sa valeur d'effroi en dessous de 1 jusqu'à ce qu'elle dépense une action, qui a le trait de concentration, pour se calmer.</p>
+<p><strong>Échec critique</strong> Comme un échec, mais la créature est Éffrayée 2.</p>
