--- a/data/equipment/consumable-07-JvpiniS6wTHsDoFX.htm
+++ b/data/equipment/consumable-07-JvpiniS6wTHsDoFX.htm
@@ -16,9 +16,9 @@ Nom: Toxine de mollesse
 <p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir</p>
 Cette toxine complexe rend les muscles sous la peau d'une créature mous et malléables, ce que les créateurs de Distordus trouvent fort utile dans l'exercice de leur travail. Les mouvements brusques ou saccadés de la victime concentrent la toxine dans les muscles sous-cutanés et finissent par faire disparaître la peau et les muscles.
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 25 Vigueur</p>
-<p><strong>Début</strong> 1 round</p>
-<p><strong>Durée maximale</strong> 1 heure</p>
-<p><strong>Stade 1</strong> [[/r 1d6 #poison]] dégâts de poison pour chaque action avec le trait d'attaque ou de mouvement que la victime utilise (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 1d6 #poison]] dégâts de poison et [[/r 1d6 #slashing]] dégâts tranchants pour chaque action avec le trait d'attaque, de manipulation, ou le trait de déplacement que la victime utilise (1 round)</p>
-<p><strong>Stade 3</strong> comme le stade 2, mais [[/r 1d6 #poison]] points de dégâts de poison et [[/r 2d6 #slashing]] de dégâts tranchants, et le mouvement forcé cause également des dégâts (1 heure)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 25;</p>
+<p><strong>Début</strong> 1 round;</p>
+<p><strong>Durée maximale</strong> 1 heure;</p>
+<p><strong>Stade 1</strong> [[/r 1d6 #poison]] dégâts de poison pour chaque action avec le trait d'attaque ou de mouvement que la victime utilise (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 1d6 #poison]] dégâts de poison et [[/r 1d6 #tranchants]] dégâts tranchants pour chaque action avec le trait d'attaque, de manipulation, ou le trait de déplacement que la victime utilise (1 round);</p>
+<p><strong>Stade 3</strong> comme le stade 2, mais [[/r 1d6 #poison]] points de dégâts de poison et [[/r 2d6 #tranchants]] de dégâts tranchants, et le mouvement forcé cause également des dégâts (1 heure)</p>
