--- a/data/equipment/consumable-07-TqX34x9CijryfrlM.htm
+++ b/data/equipment/consumable-07-TqX34x9CijryfrlM.htm
@@ -8,6 +8,6 @@ Nom: Potion de souffle d'un jeune dragon d'airain
 <p>After you use the breath weapon, you can't do so again for [[/r 1d4]] rounds.</p>
 ------ Description (fr) ------
 <p>Ce liquide contient du sang d’un jeune dragon d'arain. Pendant 1 heure après l’avoir bu, vous pouvez souffler comme un tel dragon. Le souffle possède le trait feu. </p>
-<p>Il suffit d’une action unique pour souffler. Le souffle affecte une ligne de 9 mètres de dégâts de feu. Le souffle d'un dragon d'airain inflige [[/r 4d6]] dégâts de feu et chaque créature dans la zone touchée doit faire un jet de réflexes basique DD 23. </p>
+<p>Il suffit d’une action unique pour souffler. Le souffle affecte une ligne de 9 mètres de dégâts de feu. Le souffle d'un dragon d'airain inflige [[/r 4d6 #feu]] dégâts de feu et chaque créature dans la zone touchée doit faire un jet de Réflexes basique DD 23. </p>
 <p> Une fois que vous avez soufflé, vous ne pouvez plus le faire pendant [[/r 1d4]] rounds. </p>
 
