--- a/data/equipment/consumable-09-vL6AtFbcxbipGvtf.htm
+++ b/data/equipment/consumable-09-vL6AtFbcxbipGvtf.htm
@@ -9,4 +9,4 @@ Nom: Oeil de Basilic
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
 <p><strong>Déclencheur</strong> Vous effectuez un @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Blocage au bouclier} à une attaque de mêlée avec le bouclier où l'oeil de basilic est fixé.</p>
-<p>Cette pierre verte gluante brille d'une forte lumière chaque fois que le bouclier qu'elle orne bloque une attaque de mêlée. Lorsque l'oeil est activé, l'attaquant doit réussir une sauvegarde de Force DD 25 ou devenir @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 pendant 1 minute alors que son corps se raidit lentement dans une pétrification partielle.</p>
+<p>Cette pierre verte gluante brille d'une forte lumière chaque fois que le bouclier qu'elle orne bloque une attaque de mêlée. Lorsque l'oeil est activé, l'attaquant doit réussir une sauvegarde de Vigueur DD 25 ou devenir @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 pendant 1 minute alors que son corps se raidit lentement dans une pétrification partielle.</p>
