--- a/data/equipment/consumable-10-7TT0XIb8ovLFOP2e.htm
+++ b/data/equipment/consumable-10-7TT0XIb8ovLFOP2e.htm
@@ -15,8 +15,8 @@ Nom: Senteur de miel
 Ce poison au parfum sucré déclenche des hallucinations très vives chez ceux qui y succombent. La plupart croient que des nuées d'insectes piqueurs et voraces se nourrissent d'eux. Ces hallucinations sont si vives que les victimes s'infligent des dégâts, en se griffant et en essayant de frapper la nuée imaginaire. À la discrétion du MJ, une créature incapable de se griffer peut se cogner contre des objets solides, auquel cas le poison inflige des dégâts contondants.
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir (Inhalé)</p>
-<p><strong>Jet de sauvegarde</strong> DD 30 Volonté</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 2d6#slashing]] points de dégâts tranchants (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 2d6#slashing]] points de dégâts tranchant et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 2d6#slashing]] points de dégâts tranchants, @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1, et Stupéfié 1</p>
+<p><strong>Jet de sauvegarde</strong> Volonté DD 30;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 2d6#tranchants]] dégâts tranchants (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 2d6#tranchants]] dégâts tranchant et @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 1 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 2d6#tranchants]] dégâts tranchants, @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé} 1, et Stupéfié 1</p>
