--- a/data/equipment/consumable-14-ywYt2SyZaV95KcZH.htm
+++ b/data/equipment/consumable-14-ywYt2SyZaV95KcZH.htm
@@ -5,4 +5,4 @@ Nom: Potion de résistance (supérieure)
 ------ Description (en) ------
 <p><span>Drinking this thick, fortifying potion grants 15 resistance against a single damage type for 1 hour. Each <em>potion of resistance</em> is created to defend against acid, cold, electricity, fire, or sonic damage (and is called a <em>lesser potion of fire resistance</em> or the like). </span></p>
 ------ Description (fr) ------
-<p>Boire cette potion épaisse et fortifiante accorde 15 de résistance contre un seul type de dégâts pendant 1 heure. Chaque potion de résistance est créée pour se défendre contre les dégâts d'acide, de froid, d'électricité, de feu ou de son (et est appelée une <em>moindre potion de résistance au feu</em> ou similaire).</p>
+<p>Boire cette potion épaisse et fortifiante accorde 15 de résistance contre un seul type de dégâts pendant 1 heure. Chaque potion de résistance est créée pour se défendre contre les dégâts d'acide, de froid, d'électricité, de feu ou de son (et est appelée une potion de résistance au feu inférieure ou similaire).</p>
