--- a/data/equipment/consumable-10-dzfmP3WsA15puenS.htm
+++ b/data/equipment/consumable-10-dzfmP3WsA15puenS.htm
@@ -5,5 +5,5 @@ Nom: Potion de résistance (modérée)
 ------ Description (en) ------
 <p><span>Drinking this thick, fortifying potion grants 10 resistance against a single damage type for 1 hour. Each <em>potion of resistance</em> is created to defend against acid, cold, electricity, fire, or sonic damage (and is called a <em>lesser potion of fire resistance</em> or the like). </span></p>
 ------ Description (fr) ------
-<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 10 contre un seul type de dégâts pendant une heure.</p>  Cette potion de résistance est créée pour se défendre contre les dégâts d'acide, de froid, d'électricité, de feu ou de son (et est appelée Potion de résistance au feu ou similaire).</p>
+<p>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 10 contre un seul type de dégâts pendant une heure.</p>  Cette potion de résistance est créée pour se défendre contre les dégâts d'acide, de froid, d'électricité, de feu ou de son (et est appelée Potion de résistance au feu inférieure ou similaire).</p>
 
