--- a/data/equipment/consumable-10-RH1fNsslZ1wdeqy2.htm
+++ b/data/equipment/consumable-10-RH1fNsslZ1wdeqy2.htm
@@ -18,11 +18,11 @@ Nom: Herbe de terreur
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Élaborée à partir  d'herbe toxique trouvée dans les cimetières qui est broyée et fermentée pour obtenir une pâte verdâtre infusée magiquement d'horreur psychique. L'effet @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayé} de l'herbe de terreur, ne peut être supprimée tant que le poison dure.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DD 30 Vigueur</p>
-<p><strong>Début</strong> 1 minute.</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 30;</p>
+<p><strong>Début</strong> 1 minute;</p>
 <p><strong>Durée maximale</strong> 6 minutes.</p>
-<p><strong>Stade 1</strong> [[/r 7d6 #poison]] points de dégâts de poison et Efrayé 1 (1 minute);</p>
-<p><strong>Stade 2</strong> [[/r 8d6 #poison]] points de dégâts de poison et Effrayé 2 (1 minute);</p>
-<p><strong>Stade 3</strong> [[/r 9d6 #poison]] points de dégâts de poison et Effrayé 3 (1 minute)</p>
+<p><strong>Stade 1</strong> [[/r 7d6 #poison]] dégâts de poison et Éfrayé 1 (1 minute);</p>
+<p><strong>Stade 2</strong> [[/r 8d6 #poison]] dégâts de poison et Éffrayé 2 (1 minute);</p>
+<p><strong>Stade 3</strong> [[/r 9d6 #poison]] dégâts de poison et Éffrayé 3 (1 minute)</p>
 <hr />
-<p><strong>Condition de fabrication</strong> Fournissez un sort de @Compendium[pf2e.spells-srd.4koZzrnMXhosn0D]{Terreur} de niveau 4.</p>
+<p><strong>Condition de fabrication</strong> Fournir une incantation de @Compendium[pf2e.spells-srd.4koZzrnMXhosn0D]{Terreur} de niveau 4.</p>
