--- a/data/equipment/consumable-10-Wjkw0lEUOhypYvzo.htm
+++ b/data/equipment/consumable-10-Wjkw0lEUOhypYvzo.htm
@@ -15,8 +15,8 @@ Nom: Distillation d'ombre
 <p>Distillée du plan de l'ombre, cette substance huileuse impose des effets ténébreux. L'état d'affaiblissement dû à la distillation d'ombre dure 24 heures.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> DD 29 Vigueur</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 3d6#négative]] points de dégâts négatifs et [[/r 2d6#poison]] points de dégâts de poison (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 3d6#negative]] points de dégâts négatifs, [[/r 2d6#poison]] points de dégâts de poison, et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 3d6#negative]] points de dégâts négatifs, [[/r 2d6#poison]] points de dégâts de poison, et Affaibli 2 (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 29;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 3d6#négatif]] points de dégâts négatifs et [[/r 2d6#poison]] points de dégâts de poison (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 3d6#negatif]] points de dégâts négatifs, [[/r 2d6#poison]] points de dégâts de poison, et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 3d6#negatif]] points de dégâts négatifs, [[/r 2d6#poison]] points de dégâts de poison, et Affaibli 2 (1 round);</p>
