--- a/data/equipment/consumable-11-8GEsRsQAdDljRT1s.htm
+++ b/data/equipment/consumable-11-8GEsRsQAdDljRT1s.htm
@@ -18,11 +18,11 @@ Nom: Huile de la faim
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Obtenue à partir de la graisse de corps de créatures mortes-vivantes et imprégnée de magie goule, cette huile jaunâtre provoque chez ses victimes une sensation de faim lancinante que seul l'ingestion de chair vivante peut apaiser. Si vous mangez au moins une bouchée de chair humanoïde, vous ignorez la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} de l'huile de la faim pendant 1 minute. Sous l'effet de l'huile de la faim, vous récupérez deux fois moins de points de vie sous les effets de soins, à moins que vous n'ayez mangé au moins une bouchée de chair humanoïde au cours de la dernière minute.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DD 30 Vigueur</p>
-<p><strong>Début</strong> 1 minute.</p>
-<p><strong>Durée maximale</strong> 6 minutes.</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 30;</p>
+<p><strong>Début</strong> 1 minute;</p>
+<p><strong>Durée maximale</strong> 6 minutes;</p>
 <p><strong>Stade 1</strong> Affaibli 2 (1 minute);</p>
 <p><strong>Stade 2</strong> Affaibli 3 (1 minute);</p>
 <p><strong>Stade 3</strong> Affaibli 4 (1d4 minutes)</p>
 <hr />
-<p><strong>Condition de fabrication</strong> Fournissez un sort de @Compendium[pf2e.spells-srd.JhRuR7Jj3ViShpq7]{Désirs macabres}.</p>
+<p><strong>Condition de fabrication</strong> Fournissez une incantation de @Compendium[pf2e.spells-srd.JhRuR7Jj3ViShpq7]{Désirs macabres}.</p>
