--- a/data/equipment/consumable-17-M4ZOHOlne43ArjOC.htm
+++ b/data/equipment/consumable-17-M4ZOHOlne43ArjOC.htm
@@ -11,7 +11,7 @@ Nom: Mutagène de Coeur de drake (majeur)
 <p><strong>Duration</strong> 1 hour or until you use Final Surge, whichever comes first.</p>
 <p>@Compendium[pf2e.consumable-effects.vFOr2JAJxiVvvn2E]{Effect: Drakeheart Mutagen (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 <p><p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
