--- a/data/equipment/consumable-17-ccrdVliTNBh2mNZf.htm
+++ b/data/equipment/consumable-17-ccrdVliTNBh2mNZf.htm
@@ -11,7 +11,7 @@ Nom: Mutagène de sérénité (majeur)
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.t7VUJHSUT6bkVUjg]{Effect: Serene Mutagen (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +4 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Quand vous obtenez un succès sur un jet de Volonté contre un effet mental, vous remportez à la place un succès critique tandis que vos échecs critiques sur les jets de Volonté contre un effet mental deviennent de simples échecs.</p>
