--- a/data/equipment/consumable-11-Yej7lnnDYDZybGqo.htm
+++ b/data/equipment/consumable-11-Yej7lnnDYDZybGqo.htm
@@ -11,7 +11,7 @@ Nom: Mutagène de sérénité (supérieur)
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.jw6Tr9FbErjLAFLQ]{Effect: Serene Mutagen (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +3 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Ce bonus augmente à +4 lorsque vous faites un jet de Volonté contre les effets mentaux. Si vous obtenez un succès à un jet de Volonté contre un effet mental, vous obtenez à la place un succès critique..</p>
