--- a/data/equipment/consumable-03-XEYveTvLH1lJ4jeI.htm
+++ b/data/equipment/consumable-03-XEYveTvLH1lJ4jeI.htm
@@ -11,7 +11,7 @@ Nom: Mutagène de sérénité (modéré)
 <p><strong>Duration</strong> 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effect: Serene Mutagen (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +2 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Ce bonus augmente à +3 lorsque vous faites un jet de Volonté contre les effets mentaux.</p>
