--- a/data/equipment/consumable-01-bOPQDM54W8ZDoULY.htm
+++ b/data/equipment/consumable-01-bOPQDM54W8ZDoULY.htm
@@ -11,7 +11,7 @@ Nom: Mutagène de sérénité (inférieur)
 <p><strong>Duration</strong> 1 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.5xgapIXn5DwbXHKh]{Effect: Serene Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +1 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Ce bonus augmente à +2 lorsque vous faites un jet de Volonté contre les effets mentaux.</p>
