--- a/data/equipment/consumable-12-8uyRlAkWdEyfOziq.htm
+++ b/data/equipment/consumable-12-8uyRlAkWdEyfOziq.htm
@@ -15,8 +15,8 @@ Nom: Fléau du mage
 Après avoir été mélangée et injectée dans le sang, cette poudre d'orchidée pourpre attaque rapidement le cerveau et les nerfs, perturbant la capacité de la victime à rassembler des pensées cohérentes et des sorts.
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">T</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> DD 32 Vigueur</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 32;</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong>  2d6 points de dégâts mentaux et @Compendium [pf2e. conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round)</p>
-<p><strong>Stade 2</strong>  3d6 points de dégâts mentaux et Stupéfié 3 (1 round)</p>
-<p><strong>Stade 3</strong>  4d6 points de dégâts mentaux et Stupéfié 4 (1 round)</p>
+<p><strong>Stade 1</strong>  2d6 points de dégâts mentaux et @Compendium [pf2e. conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round);</p>
+<p><strong>Stade 2</strong>  3d6 points de dégâts mentaux et Stupéfié 3 (1 round);</p>
+<p><strong>Stade 3</strong>  4d6 points de dégâts mentaux et Stupéfié 4 (1 round);</p>
