--- a/data/equipment/consumable-12-bRqczrlQDaeUvg6b.htm
+++ b/data/equipment/consumable-12-bRqczrlQDaeUvg6b.htm
@@ -13,7 +13,7 @@ Nom: Adrénaline plasmatique
 ------ Description (fr) ------
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact</p>
 <p>Un supplément d'adrénaline synthétique qui augmente la conscience et le temps de réaction. Cette molécule a été infusé avec un mélange spécifique de fluides numériens et d'autres réactifs alchimiques afin d'améliorer la formule originale de l'Adrénaline.</p>
-<p><strong>Jet de sauvegarde</strong> DC 30 Vigueur;</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DC 30;</p>
 <p><strong>Durée maximale</strong> 1 minute;</p>
 <p><strong>Stade 1</strong> Bonus d'état de +4,5 mètres à la vitesse, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} et peut utiliser l'action supplémentaire pour @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faire un pas} ou  @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} (1 round);</p>
 <p><strong>Stade 2</strong> Accéléré et possibilité d'utiliser une action supplémentaire Faire un pas ou Marcher rapidement;</p>
