--- a/data/equipment/consumable-12-mWXaROc9ytjdGVVP.htm
+++ b/data/equipment/consumable-12-mWXaROc9ytjdGVVP.htm
@@ -5,4 +5,4 @@ Nom: Piège à faux
 ------ Description (en) ------
 <p>This snare sends a powerful series of scything blades to slice through a creature entering the snare's square, dealing 14d8 slashing damage (DC 31 basic Reflex).</p>
 ------ Description (fr) ------
-<p>Ce piège envoie une puissante série de lames faucheuses pour trancher une créature qui entre dans la case du piège à faux.  Les lames faucheuses lui infligent 14d8 points de dégâts tranchants (DD 31 Réflexe).</p>
+<p>Ce piège envoie une puissante série de lames faucheuses pour trancher une créature qui entre dans la case du piège à faux.  Les lames faucheuses lui infligent 14d8 points de dégâts tranchants (Réflexe DD 31).</p>
