--- a/data/equipment/consumable-12-WvDbdESFJY6Be2u1.htm
+++ b/data/equipment/consumable-12-WvDbdESFJY6Be2u1.htm
@@ -14,10 +14,10 @@ Nom: Fléau du doigt noir
 ------ Description (fr) ------
 <p><strong>Activation</strong><span class="pf2-icon">2</span>Interagir</p>
 <hr />
-<p>Cette poudre huileuse, de couleur violet foncé, dégage une odeur distincte de cuir bouilli. Lorsqu'il est administré, le poison agit rapidement en réduisant le flux sanguin de la victime dans ses extrémités et en transformant ses poumons en une gelée molle. Une victime de du fléau du doigt noir est reconnaissable, car les pores du bout de ses doigts suintent une huile d'encre qui recouvre ses mains. Dès lors, sa prise d'objets est rendue difficile. Chaque round, au début de son tour, une créature affectée par le fléau du doigt noir, doit réussir un test nu DC 5 ou laisser tomber un objet aléatoire qu'elle tient.<br /></p>
-<strong>Jet de sauvegarde</strong> DD 32 Vigueur.</p>
-<p><strong>Début</strong> 1 round.</p>
-<p><strong>Durée maximale</strong> 6 rounds.</p>
-<p><strong>Stade 1</strong> [[/r 6d6 #poison]] points de dégâts de poison (1 round);</p>
-<p><strong>Stade 2</strong> [[/r 8d6 #poison]] points de dégâts de poison (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 10d6 #poison]] points de dégâts de poison et @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}(1 round)</p>
+<p>Cette poudre huileuse, de couleur violet foncé, dégage une odeur distincte de cuir bouilli. Lorsqu'il est administré, le poison agit rapidement en réduisant le flux sanguin de la victime dans ses extrémités et en transformant ses poumons en une gelée molle. Une victime de du fléau du doigt noir est reconnaissable, car les pores du bout de ses doigts suintent une huile d'encre qui recouvre ses mains. Dès lors, sa prise d'objets est rendue difficile. Chaque round, au début de son tour, une créature affectée par le fléau du doigt noir, doit réussir un test nu DC 5 ou laisser tomber un objet aléatoire qu'elle tient.</p>
+<strong>Jet de sauvegarde</strong> Vigueur DD 32;</p>
+<p><strong>Début</strong> 1 round;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 6d6 #poison]] dégâts de poison (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 8d6 #poison]] dégâts de poison (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 10d6 #poison]] dégâts de poison et @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}(1 round)</p>
