--- a/data/equipment/consumable-13-6vyr3drpizIrd5PS.htm
+++ b/data/equipment/consumable-13-6vyr3drpizIrd5PS.htm
@@ -18,11 +18,11 @@ Nom: Vapeurs du jour
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Cette brume plus lourde que l'air émet une douce lueur. Tant que ce poison dure, il fait briller ses victimes de l'intérieur avec un rayonnement d'agonie et de brillance. Cet effet a le trait de lumière (bien que le poison lui-même ne l’ait pas, donc seul l’effet de lumière peut être contré par des effets d’obscurité). La condition @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} de la vapeur du jour ne peut pas être supprimée tant que le poison dure, et lorsque la victime entre dans une zone d'obscurité magique, le poison tente de contrer l'obscurité avec un modificateur d'effet de +21. Si le poison échoue, il ne peut plus tenter de contrer la même obscurité.
 <hr />
-<p><strong>Jet de sauvegarde</strong> DD 31 Vigueur.</p>
-<p><strong>Début</strong> 1 round.</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 31;</p>
+<p><strong>Début</strong> 1 round;</p>
 <p><strong>Durée maximale</strong> 6 rounds.</p>
-<p><strong>Stade 1</strong>[[/r 4d6 #poison]] points de dégâts de poison et Malade 1 (1 round);</p>
-<p><strong>Stade 2</strong>[[/r 6d6 #poison]] points de dégâts de poison et Malade 2 (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 10d6 #poison]] points de dégâts de poison et Malade 3 (1 round)</p>
+<p><strong>Stade 1</strong>[[/r 4d6 #poison]] dégâts de poison et Malade 1 (1 round);</p>
+<p><strong>Stade 2</strong>[[/r 6d6 #poison]] dégâts de poison et Malade 2 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 10d6 #poison]] dégâts de poison et Malade 3 (1 round)</p>
 <hr />
-<p><strong>Condition de fabrication</strong> Fournir un sort de @Compendium[pf2e.spells-srd.a3aQxCpoj1q1NQxC]{Explosion de lumière}.</p>
+<p><strong>Condition de fabrication</strong> Fournir une incantation de @Compendium[pf2e.spells-srd.a3aQxCpoj1q1NQxC]{Explosion de lumière}.</p>
