--- a/data/equipment/consumable-13-BxzwmwQ5O4fewa4w.htm
+++ b/data/equipment/consumable-13-BxzwmwQ5O4fewa4w.htm
@@ -14,4 +14,4 @@ Nom: Répulsif de ver Pourpre
 <p>Si la créature enrobée est avalée par le type de ver des cavernes désigné, ce dernier doit réussir un jet de sauvegarde Vigueur ou régurgiter involontairement la créature avalée au prochain round (une seule action).</p>
 <p>Lorsqu'il est saupoudré autour d'une zone, le répulsif pour vers des cavernes annule toute chance de rencontre aléatoire avec le type particulier de vers des cavernes dans cette zone, car les créatures évitent délibérément la zone affectée.</p>
 <p>D'autres types de répulsifs fonctionnant de manière similaire à celui-ci peuvent exister à la discrétion du MJ. Les créatures peu communes ou rares sont généralement beaucoup plus difficiles à repousser, et le répulsif contre elles peut nécessiter de récolter des ingrédients sur les créatures elles-mêmes (comme le foie de la créature ou une certaine glande).</p>
-<strong>Activation</strong> 1 minute (Interagir) </span></p>
+<p><strong>Activation</strong> 1 minute (Interagir)</p>
