--- a/data/equipment/consumable-13-C0Zhu7Vwy9Aipwoh.htm
+++ b/data/equipment/consumable-13-C0Zhu7Vwy9Aipwoh.htm
@@ -15,7 +15,7 @@ Nom: Belladonne spectrale
 <hr />
 <p>Craft Requirements Supply one casting of @Compendium[pf2e.spells-srd.PHVHBbdHeQRfjLmE]{Spirit Blast}.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact;</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Les belladonnes spectrales sont cultivées dans des plans dangereux pour les visiteurs vivants, comme le Plan de l'Ombre ou le Cimetière. Leurs branches sont d'un aspect étrange et squelettique. Les feuilles et les baies de ces plantes extraplanaires sont en partie incorporelles et nettement plus toxiques que la belladone cultivée sur le plan matériel. Lorsqu'elle est imprégnée de magie affectant l'esprit, la belladonne spectrale draine rapidement la vitalité de la victime et rend les couleurs douloureusement vives et déroutantes. La belladonne spectrale n'affecte pas les créatures qui n'ont pas d'esprit. Si l'esprit d'un possesseur habite un corps qui subit des dégâts de poison de belladonne spectrale, le possesseur subit une quantité égale de dégâts de force, même s'il ne peut pas être affecté directement par les poisons.
 <hr />
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 33;</p>
