--- a/data/equipment/consumable-13-QImdOdyolrMWwuxD.htm
+++ b/data/equipment/consumable-13-QImdOdyolrMWwuxD.htm
@@ -17,10 +17,10 @@ Nom: Souffle de Gorgone
 Le souffle de la Gorgone est une poudre fine qui pénètre facilement dans le sang des créatures vivantes par les poumons avant de se fixer aux muqueuses et de durcir les tissus mous à proximité.
 <hr />
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir (Inhalé)</p>
-<p><strong>Jet de sauvegarde</strong> DD 32 Vigueur</p>
-<p><strong>Début</strong> 1 round</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Étape 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 round)</p>
-<p><strong>Stage 2</strong> [[/r 4d6#bludgeoning]] points de dégâts contondants et Ralenti 1 (1 round)</p>
-<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.dTwPJuKgBQCMxixg]{Pétrifié} (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 32;</p>
+<p><strong>Début</strong> 1 round;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Étape 1</strong> @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralenti} 1 (1 round);</p>
+<p><strong>Stage 2</strong> [[/r 4d6 #contondants]] dégâts contondants et Ralenti 1 (1 round):</p>
+<p><strong>Stade 3</strong> @Compendium[pf2e.conditionitems.dTwPJuKgBQCMxixg]{Pétrifié} (1 round);</p>
 <p><strong>Stade 4</strong> Pétrifié définitivement</p>
