--- a/data/equipment/consumable-14-DIQg2Tml1wWjSC1q.htm
+++ b/data/equipment/consumable-14-DIQg2Tml1wWjSC1q.htm
@@ -10,7 +10,7 @@ Nom: Piège engloutissant
 <p><strong>Failure</strong> The creature is captured by the cage, taking full damage and falling @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{Prone}. It is @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized} while it remains within the cage. It can get free by @Compendium[pf2e.actionspf2e.SkZAQRkLLkmBQNB9]{Escaping} (DC 31) or by destroying the cage (Hardness 5, HP 30, object immunities).</p>
 <p><strong>Critical Failure</strong> As failure, but the creature takes double damage.</p>
 ------ Description (fr) ------
-<p>Vous fabriquez une cage hérissée d'os, de végétation particulièrement résistante ou d'autres matériaux pour qu'ils surgissent lorsqu'ils sont dérangés. Le piège inflige [[/r 9d8 #piercing]] points de dégâts perforants à la première créature qui entre dans la case du piège. Cette créature a le droit de tenter un jet de sauvegarde Réflexes DD 31.</p>
+<p>Vous fabriquez une cage hérissée d'os, de végétation particulièrement résistante ou d'autres matériaux pour qu'ils surgissent lorsqu'ils sont dérangés. Le piège inflige [[/r 9d8 #perforants]] points de dégâts perforants à la première créature qui entre dans la case du piège. Cette créature a le droit de tenter un jet de sauvegarde Réflexes DD 31.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature est renversée par le déploiement du piège, subissant la moitié des dégâts, et est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} jusqu'à la fin de son prochain tour.</p>
