--- a/data/equipment/consumable-15-cSrCTi2zE5OU5ylH.htm
+++ b/data/equipment/consumable-15-cSrCTi2zE5OU5ylH.htm
@@ -19,8 +19,8 @@ Nom: Résidu de mort aflligée
 <hr />
 <p><strong>Jet de sauvegarde</strong> Vigueur DD 35;</p>
 <p><strong>Durée maximale</strong> 6 rounds;</p>
-<p><strong>Phase 1</strong> [[/r 5d6 #negatif]] dégâts négatifs et [[/r 3d6 #poison]] dégâts poison (1 round);</p>
-<p><strong>Stade 2</strong> [[/r 6d6 #negatif]] dégâts négatifs et [[/r 4d6 #poison]] dégâts poison (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 7d6 #negatif]] dégâts négatifs et [[/r 5d6 #poison]] dégâts poison (1 round)</p>
+<p><strong>Phase 1</strong> [[/r 5d6 #négatif]] dégâts négatifs et [[/r 3d6 #poison]] dégâts poison (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 6d6 #négatif]] dégâts négatifs et [[/r 4d6 #poison]] dégâts poison (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 7d6 #négatif]] dégâts négatifs et [[/r 5d6 #poison]] dégâts poison (1 round)</p>
 <hr />
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de @Compendium[pf2e.spells-srd.wdA52JJnsuQWeyqz]{Mise à mal} de niveau 8</p>
