--- a/data/equipment/consumable-16-7p3C9xf3XgUbvKHL.htm
+++ b/data/equipment/consumable-16-7p3C9xf3XgUbvKHL.htm
@@ -16,9 +16,9 @@ Nom: Huile de frénésie
 Cette huile, qui est pressée à partir de spores de Vrock et mélangée à une combinaison de cendres d'acacia et de graines de chardon, s'infiltre dans la peau des créatures vivantes, inspirant d'abord une irritabilité qui découle de façon imprévisible en une rage de barbare.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
-<p><strong>Jet de sauvegarde</strong> DD 37 Vigueur</p>
-<p><strong>Début</strong> [[/r 1d6]] minutes</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 4d6#mental]] points de dégâts mentaux, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} 1, attaque les créatures proches comme si il est dans un état  @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}. (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 6d6#mental]] points de dégâts mentaux, attaque les créatures proches dans un état Confus (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 8d6#mental]] points de dégâts mentaux, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}, attaque les créatures proches dans un état Confus (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 37;</p>
+<p><strong>Début</strong> [[/r 1d6]] minutes;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 4d6#mental]] dégâts mentaux, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} 1, attaque les créatures proches comme si il est dans un état  @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 6d6#mental]] dégâts mentaux, attaque les créatures proches dans un état Confus (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 8d6#mental]] de dégâts mentaux, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}, attaque les créatures proches dans un état Confus (1 round)</p>
