--- a/data/equipment/consumable-16-9hdT05ywPVyh9vQX.htm
+++ b/data/equipment/consumable-16-9hdT05ywPVyh9vQX.htm
@@ -15,8 +15,8 @@ Nom: Fléau céruléen
 Fabriqué à partir d'un mélange soigneusement distillé d'hémotoxines serpentines, le fléau céruléen à action rapide est tristement célèbre pour transformer les vaisseaux sanguins près de la blessure d'origine, qui s'illuminent d'une vive lumière bleue avant d'éclater douloureusement.</p>
 <hr />
 <p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir (Blessure)</p>
-<p><strong>Jet de sauvegarde</strong> DC 36 Vigueur</p>
-<p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 9d6 #poison]] points de dégâts poison (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 12d6 #poison]] points de dégâts poison (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 15d6 #poison]] points de dégâts poison (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 36;</p>
+<p><strong>Durée maximale</strong> 6 rounds;</p>
+<p><strong>Stade 1</strong> [[/r 9d6 #poison]] dégâts poison (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 12d6 #poison]] dégâts poison (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 15d6 #poison]] dégâts poison (1 round);</p>
