--- a/data/equipment/consumable-16-7p3C9xf3XgUbvKHL.htm
+++ b/data/equipment/consumable-16-7p3C9xf3XgUbvKHL.htm
@@ -21,4 +21,4 @@ Cette huile, qui est pressée à partir de spores de Vrock et mélangée à une 
 <p><strong>Durée maximale</strong> 6 rounds;</p>
 <p><strong>Stade 1</strong> [[/r 4d6#mental]] dégâts mentaux, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} 1, attaque les créatures proches comme si il est dans un état  @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} (1 round);</p>
 <p><strong>Stade 2</strong> [[/r 6d6#mental]] dégâts mentaux, attaque les créatures proches dans un état Confus (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 8d6#mental]] de dégâts mentaux, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}, attaque les créatures proches dans un état Confus (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 8d6#mental]] dégâts mentaux, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}, attaque les créatures proches dans un état Confus (1 round)</p>
