révision dons de classe 08

--- a/data/feats/class-08-Ar6W97iun6yYI8Df.htm
+++ b/data/feats/class-08-Ar6W97iun6yYI8Df.htm
@@ -2,12 +2,11 @@ Name: Delay Trap
 Nom: Retardement de piège
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can jam the workings of a trap to delay its effects.
-Avantage: Vous pouvez brouiller le fonctionnement d'un piège pour en retarder les effets.
+Avantage: Vous pouvez retarder le déclenchement d'un piège.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A trap within your reach is triggered.<br /></p>
