--- a/data/feats/class-08-CL9pFxxMXqzIyg4j.htm
+++ b/data/feats/class-08-CL9pFxxMXqzIyg4j.htm
@@ -2,14 +2,12 @@ Name: Wild Winds Initiate
 Nom: Initié des vents violents
 PrereqEN: |ki spells
 PrereqFR: sorts ki
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You learn a mystical stance that lets you attack from a distance.
-Avantage: Vous apprenez une posture mystique qui vous permet d'attaquer à distance.
------- Benefits and spoiler ----
-Avantage: Vous apprenez une posture mystique qui vous permet d'attaquer à distance.
+Avantage: Vous obtenez le sort ki Posture des vents violents.
+
 ------ Description (en) ------
 <p>You learn a mystical stance that lets you attack from a distance. You gain the @Compendium[pf2e.spells-srd.SkarN4VlNxSJSJNw]{Wild Winds Stance} ki spell. Increase the number of Focus Points in your focus pool by 1.</p>
 <p>While entering the stance is a ki spell, the wind crash Strikes the stance grants are not, so you can use them as often as you like while in the stance.</p>
