--- a/data/feats/class-08-DYc108IqRBP9N9W6.htm
+++ b/data/feats/class-08-DYc108IqRBP9N9W6.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your muse has opened your senses to the world beyond.
-Avantage: Votre muse a ouvert vos sens au monde de l'au-delà.
+Avantage: Vous obtenez Sens spirituel (imprécis) avec une portée de 18 m.
 
 ------ Description (en) ------
 <p>Your muse has opened your senses to the world beyond. You gain spiritsense as an imprecise sense with a range of 60 feet.</p>
