--- a/data/feats/class-08-DalEte4OQyLzR7nd.htm
+++ b/data/feats/class-08-DalEte4OQyLzR7nd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can block with your shield instinctively.
-Avantage: Vous pouvez bloquer avec votre bouclier instinctivement.
+Avantage: Vous obtenez une réaction supplémentaire pour faire un Blocage au bouclier.
 
 ------ Description (en) ------
 <p>You can block with your shield instinctively. At the start of each of your turns, you gain an additional reaction that you can use only to perform a Shield Block.</p>
