--- a/data/feats/class-08-bYijGvCvCmJnW6aA.htm
+++ b/data/feats/class-08-bYijGvCvCmJnW6aA.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: With divine awareness, you twist your body to lessen the impact of an attack.
-Avantage: Avec une conscience divine, vous tordez votre corps pour atténuer l'impact d'une attaque.
+Avantage: Vous sacrifiez votre armure pour éviter des dégâts.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are hit by a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} that deals physical damage.</p>
@@ -15,4 +15,4 @@ Avantage: Avec une conscience divine, vous tordez votre corps pour atténuer l'i
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous êtes touché par une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} qui inflige des dégâts physiques.</p>
 <hr />
-<p>Grâce à une sensibilité divine, vous déplacez votre corps pour amoindrir l'impact d'une attaque. Réduisez les dégâts que vous subissez d'un montant égal à deux fois votre niveau d'armure. Votre armure devient @Compendium[pf2e.conditionitems.6dNUvdb1dhToNDj3]{Brisée}, réduisant ses Points de vie au niveau de son Seuil de rupture. Si votre armure était déjà endommagée, elle est détruite à la place.</p>
+<p>Grâce à une prémonition divine, vous déplacez votre corps pour amoindrir l'impact d'une attaque. Réduisez les dégâts que vous subissez d'un montant égal à deux fois le niveau de votre armure. Votre armure devient @Compendium[pf2e.conditionitems.6dNUvdb1dhToNDj3]{Brisée}, réduisant ses Points de vie au niveau de son Seuil de rupture. Si votre armure était déjà endommagée, elle est détruite à la place.</p>
