--- a/data/feats/class-08-c9rhGmKft1BVT4JO.htm
+++ b/data/feats/class-08-c9rhGmKft1BVT4JO.htm
@@ -2,8 +2,11 @@ Name: Skill Mastery (Rogue)
 Nom: Maîtrise des compétences (Roublard)
 PrereqEN: Rogue Dedication|trained in at least one skill and expert in at least one skill
 PrereqFR: Dévouement du roublard|qualifié dans au moins une compétence et expert dans au moins une autre
-État: changé
-État d'origine: officielle
+État: officielle
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Votre niveau de maîtrise dans une compétence passe de qualifié à Expert et une autre d'expert à maître et gagnez un don de compétences.
 
 ------ Description (en) ------
 <p>Increase your proficiency rank in one of your skills from expert to master and in another of your skills from trained to expert. You gain a skill feat associated with one of the skills you chose.</p>
