--- a/data/feats/class-08-AgMFfp6fdNZ1mAxn.htm
+++ b/data/feats/class-08-AgMFfp6fdNZ1mAxn.htm
@@ -4,6 +4,10 @@ PrereqEN: Hellknight Armiger Dedication
 PrereqFR: Dévouement d'Écuyer Chevalier infernal
 État: libre
 
+------ Benefits and spoiler ----
+Benefits:
+Avantage: Vous obtenez le bénéfice inférieur de votre Ordre de Chevalier infernal.
+
 ------ Description (en) ------
 <p>You gain the lesser order benefit for the Hellknight order to which you belong.</p>
 ------ Description (fr) ------
