--- a/data/feats/class-08-AiV2xFhYB90KHt2x.htm
+++ b/data/feats/class-08-AiV2xFhYB90KHt2x.htm
@@ -2,14 +2,12 @@ Name: Pinning Fire
 Nom: Tir fichant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You target your opponent's clothing, equipment, or loose flesh with piercing projectiles to pin them to the ground or a nearby surface.
 Avantage: Vous ciblez les vêtements, l'équipement ou la chair libre de votre adversaire avec des projectiles perforants pour le clouer au sol ou à une surface proche.
------- Benefits and spoiler ----
-Avantage: Vous ciblez les vêtements, l'équipement ou la chair libre de votre adversaire avec des projectiles perforants pour le clouer au sol ou à une surface proche.
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> You use @Compendium[pf2e.actionspf2e.nbfNETdpee8CVM17]{Flurry of Blows} to make two ranged piercing weapon Strikes against the same target.</p>
 <hr />
@@ -17,8 +15,8 @@ Avantage: Vous ciblez les vêtements, l'équipement ou la chair libre de votre a
 <p>If both your attacks hit, the target must succeed at a Reflex save against your class DC or become @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized} until it or an adjacent creature succeeds at a DC 10 Athletics check to remove the pinning projectiles.</p>
 <p>The creature doesn't become stuck if it is incorporeal, is liquid (like a water elemental or some oozes), or could otherwise escape without effort.</p>
 ------ Description (fr) ------
-<p><strong>Déclencheur</strong> Vous utilisez @Compendium[pf2e.actionspf2e.nbfNETdpee8CVM17]{Déluge de coups} pour effectuer deux  @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} à distance avec des armes perforantes contre la même cible.</p>
+<p><strong>Déclencheur</strong> Vous utilisez @Compendium[pf2e.actionspf2e.nbfNETdpee8CVM17]{Déluge de coups} pour effectuer deux @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} à distance avec des armes perforantes contre la même cible.</p>
 <hr />
-<p>Vous ciblez les vêtements de votre adversaire, son équipement ou de la chair accessible avec des projectiles perforants pour les clouer au sol ou sur une surface à proximité.</p>
+<p>Vous ciblez les vêtements de votre adversaire, son équipement ou de la chair accessible avec des projectiles perforants pour la clouer au sol ou à une surface à proximité.</p>
 <p>Si vos deux attaques touchent, la cible doit réussir un jet de Réflexes contre votre DD de classe ou devenir @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilisée} jusqu'à ce qu'elle ou une créature adjacente réussisse un test d'Athlétisme contre un DD 10 pour retirer les projectiles fichés.</p>
 <p>La créature ne devient pas immobilisée si elle est incorporelle, constituée de liquide (comme le serait un élémentaire d'eau ou certaines vases) ou si elle peut autrement s'échapper sans effort.</p>
