--- a/data/feats/class-08-BkKWTt3ufaCN2ZdI.htm
+++ b/data/feats/class-08-BkKWTt3ufaCN2ZdI.htm
@@ -2,8 +2,7 @@ Name: Sudden Leap
 Nom: Bond soudain
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You swing at a foe while mid-leap.
@@ -20,4 +19,6 @@ Avantage: Vous vous balancez sur un ennemi en plein saut.
 <p>(Barbare) Vous frappez un ennemi alors que vous êtes en plein saut.</p>
 <p>(Guerrier) Vous faites un bond impressionnant et frappez alors que vous êtes en l'air.</p>
 <hr />
-<p>Vous faites un Bond, un Saut en hauteur ou un Saut en longueur et tentez de faire une Frappe au corps à corps à n’importe quel moment pendant votre saut. Si vous étiez encore en l’air, vous tombez au sol immédiatement après votre Frappe, même si vous n’avez pas atteint la distance maximale que vous pouviez parcourir avec votre saut. Si vous chutez d’une distance inférieure ou égale à la hauteur de votre saut, vous ne subissez aucun dégât et retombez sur vos pieds. Quand vous faites un Saut en hauteur ou en longueur dans le cadre de l’action Bond soudain, le DD est déterminé de la même manière que le DD du Saut en longueur, et la distance maximale que vous pouvez parcourir est le double de votre Vitesse.</p>
+<p>Vous faites un @Compendium[pf2e.actionspf2e.d5I6018Mci2SWokk]{Bond}, un @Compendium[pf2e.actionspf2e.2HJ4yuEFY1Cast4h]{Saut en hauteur} ou un @Compendium[pf2e.actionspf2e.JUvAvruz7yRQXfz2]{Saut en longueur} et tentez de faire une Frappe au corps à corps à n’importe quel moment pendant votre saut.</p>
+<p>Si vous étiez encore en l’air, vous tombez au sol immédiatement après votre Frappe, même si vous n’avez pas atteint la distance maximale que vous pouviez parcourir avec votre saut. Si vous chutez d’une distance inférieure ou égale à la hauteur de votre saut, vous ne subissez aucun dégât et retombez sur vos pieds.</p>
+<p>Quand vous faites un Saut en hauteur ou en longueur dans le cadre de l’action Bond soudain, le DD est déterminé de la même manière que le DD du Saut en longueur, et la distance maximale que vous pouvez parcourir est le double de votre Vitesse.</p>
