--- a/data/feats/class-08-bPqRneuJPqeXc65G.htm
+++ b/data/feats/class-08-bPqRneuJPqeXc65G.htm
@@ -6,11 +6,11 @@ PrereqFR: préceptes du mal
 
 ------ Benefits and spoiler ----
 Benefits: The presence of goodness sickens you with its saccharine self-righteousness.
-Avantage: La présence de la bonté vous rend malade avec sa suffisance saccharine.
+Avantage: Vous détectez la présence d'une aura du bien.
 
 ------ Description (en) ------
 <p>The presence of goodness sickens you with its saccharine self-righteousness. When in the presence of an aura of good that is powerful or overwhelming (<em>Core Rulebook</em> 328), you detect the aura, though you might not do so instantly, and you can't pinpoint the location. This acts as a vague sense, similar to humans' sense of smell.</p>
 <p>A good creature using a disguise or otherwise trying to hide its presence attempts a Deception check against your Perception DC to hide its aura from you. If the creature succeeds at its Deception check, it is then temporarily immune to your Sense Good for 1 day.</p>
 ------ Description (fr) ------
-<p>La présence du bien vous rend malade de sa suffisance sirupeuse. Lorsque vous êtes en présence d'une aura de bien qui est puissante ou surpuissante, vous détectez l'aura, bien que vous ne puissiez le faire instantanément et vous ne pouvvez pas désigner l'endroit. Cela agit comme un sen imprécis, similaire au sens de l'odorat d'un humain.</p>
-<p>Une créature bonne utilisant un déguisement ou tentant autrement de cacher sa présence tente un test de Duperie contre votre DD de Perception pour vous cacher son aura. Si la créature réussit son test de Duperie, elle est alors temporairement immunisée contre votre Perception du bien pendant 1 journée.</p>
+<p>La présence du bien vous rend malade de sa suffisance sirupeuse. Lorsque vous êtes en présence d'une aura de bien qui est puissante ou surpuissante, vous détectez l'aura, bien que vous ne puissiez le faire instantanément et vous ne pouvez pas en déterminer la source. Cela agit comme un sen imprécis, similaire au sens de l'odorat d'un humain.</p>
+<p>Une créature bonne qui utilise un déguisement ou qui tente autrement de cacher sa présence effectue un test de Duperie contre votre DD de Perception pour parvenir à cacher son aura. Si la créature réussit son test de Duperie, elle est alors temporairement immunisée contre votre Perception du bien pendant 1 journée.</p>
