--- a/data/feats/class-08-cA1IIy6UEsgETXiX.htm
+++ b/data/feats/class-08-cA1IIy6UEsgETXiX.htm
@@ -6,7 +6,7 @@ PrereqFR: maître en Athlétisme
 
 ------ Benefits and spoiler ----
 Benefits: You bully foes across the battlefield.
-Avantage: Vous malmenez vos ennemis sur le champ de bataille.
+Avantage: En rage, vous obtenez un bonus de circonstances de +2 aux tests d'Athlétisme pour les actions d'attaque.
 
 ------ Description (en) ------
 <p>You bully foes across the battlefield. While raging, you gain a +2 circumstance bonus to Athletics checks for attack actions.</p>
