--- a/data/feats/class-08-dxujgA0NgiEvA0H8.htm
+++ b/data/feats/class-08-dxujgA0NgiEvA0H8.htm
@@ -1,15 +1,15 @@
 Name: Bleeding Finisher
-Nom: Botte hémorragique
+Nom: Coup final hémorragique
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your blow inflicts profuse bleeding.
-Avantage: Votre coup inflige une hémorragie abondante.
+Avantage: Votre coup final avec une arme ou une attaque à mains nues tranchante ou perforante inflige des dégâts persistants de saignement.
 
 ------ Description (en) ------
 <p>Your blow inflicts profuse bleeding. Make a slashing or piercing @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} with a weapon or unarmed attack that allows you to add your precise strike damage. If you hit, the target also takes persistent bleed damage equal to your precise strike finisher damage.</p>
 ------ Description (fr) ------
 <p>Votre coup provoque une abondante hémorragie.</p>
-<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} tranchante ou perforante avec une arme ou une attaque à mains nues qui vous permet d'ajouter les dégâts de votre Frappe précise. Si vous touchez, la cible subit aussi des dégâts de saignement persistants égaux aux dégats de votre botte de Frappe précise.</p>
+<p>Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} tranchante ou perforante avec une arme ou une attaque à mains nues qui vous permet d'ajouter les dégâts de votre Frappe précise. Si vous touchez, la cible subit aussi des dégâts de saignement persistants égaux aux dégats de votre coup final de Frappe précise.</p>
