dons de classe 08

--- a/data/feats/class-08-EnpbhZr94ZyZI4hb.htm
+++ b/data/feats/class-08-EnpbhZr94ZyZI4hb.htm
@@ -2,15 +2,16 @@ Name: Sense Evil
 Nom: Perception du mal
 PrereqEN: tenets of good
 PrereqFR: principes du bien
-État: changé
-État d'origine: officielle
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You sense evil as a queasy or foreboding feeling.
-Avantage: Vous ressentez le mal comme un sentiment de malaise ou de pressentiment.
+Avantage: Vous disposez d'un sens imprécis pour détecter le mal.
 
 ------ Description (en) ------
 <p>You sense evil as a queasy or foreboding feeling. When in the presence of an aura of evil that is powerful or overwhelming (page 328), you eventually detect the aura, though you might not do so instantly, and you can't pinpoint the location. This acts as a vague sense, similar to humans' sense of smell.</p>
 <p>An evil creature using a disguise or otherwise trying to hide its presence attempts a Deception check against your Perception DC to hide its aura from you. If the creature succeeds at its Deception check, it is then temporarily immune to your Sense Evil for 1 day.</p>
 ------ Description (fr) ------
-<p>Un pressentiment ou des nausées vous avertissent de la présence du mal. Quand vous êtes à proximité d’une aura de mal puissante ou écrasante, vous finissez par la détecter, même si ce n’est pas instantané et que vous ne pouvez pas la localiser avec précision. Cette détection se manifeste sous la forme d’une vague sensation similaire à une odeur perceptible par les humains. Une créature d’alignement mauvais déguisée, ou qui tente d’une façon ou d’une autre de dissimuler sa présence, fait un test de Duperie contre votre DD de Perception pour vous empêcher de sentir son aura. Si la créature réussit son test de Duperie, elle est ensuite temporairement immunisée contre votre Perception du mal pendant un jour.</p>
+<p>Vous ressentez le mal comme si vous ressentiez un malaise ou un mauvais pressentiment.</p>
+<p>Quand vous êtes à proximité d’une aura de mal puissante ou écrasante, vous finissez par la détecter, même si ce n’est pas instantané et que vous ne pouvez pas la localiser avec précision. Cette détection se manifeste sous la forme d’une vague sensation similaire au sens de l'odorat humain.</p>
+<p>Une créature d’alignement mauvais qui est déguisée ou qui tente de dissimuler sa présence, effectue un test de Duperie contre votre DD de Perception pour vous empêcher de sentir son aura. Si la créature réussit son test de Duperie, elle est ensuite immunisée temporairement contre votre Perception du mal pendant un jour.</p>
