--- a/data/feats/class-08-JHJBmiyILzWdFRJO.htm
+++ b/data/feats/class-08-JHJBmiyILzWdFRJO.htm
@@ -6,7 +6,7 @@ PrereqFR: Domaine de la divinité
 
 ------ Benefits and spoiler ----
 Benefits: Through your conviction, you have glimpsed the deeper secrets of your deity’s domain.
-Avantage: Vous gagnez un sort de domaine avancé du domaine choisi et obtenez un point de focalisation.
+Avantage: Vous obtenez un sort de dévotion avancé correspondant au domaine de votre divinité.
 
 ------ Description (en) ------
 <p>Through your conviction, you have glimpsed the deeper secrets of your deity's domain. You gain an advanced domain spell from the domain you chose with Deity's Domain. You can cast that spell as a devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
