--- a/data/feats/class-08-JOq4Xe49A04YycRz.htm
+++ b/data/feats/class-08-JOq4Xe49A04YycRz.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your composition takes the form of a call-and-response chant, which lets your allies continue the effect without you.
-Avantage: Votre composition prend la forme d'un chant d'appel et de réponse, qui permet à vos alliés de poursuivre l'effet sans vous.
+Avantage: Un allié peut étendre la durée d'un de vos tours de magie de composition d'un round en dépensant une action.
 
 ------ Description (en) ------
 <p>Your composition takes the form of a call-and-response chant, which lets your allies continue the effect without you.</p>
