--- a/data/feats/class-08-Jj6sVfIX81tgvSY4.htm
+++ b/data/feats/class-08-Jj6sVfIX81tgvSY4.htm
@@ -6,7 +6,7 @@ PrereqFR: ordre de la tempête
 
 ------ Benefits and spoiler ----
 Benefits: You bid the winds to lift and carry you through the air.
-Avantage: Vous obtenez le sort d’ordre Vol de l’ouragan et augmentez le nombre de point de focalisation de 1.
+Avantage: Vous obtenez le sort d’ordre Vol de l’ouragan.
 
 ------ Description (en) ------
 <p>You bid the winds to lift and carry you through the air. You gain the @Compendium[pf2e.spells-srd.gSFg9zKwgcNZLMEs]{Stormwind Flight} order spell. Increase the number of Focus Points in your focus pool by 1.</p>
