--- a/data/feats/class-08-iy9XKih5jIAdv67c.htm
+++ b/data/feats/class-08-iy9XKih5jIAdv67c.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You can give others a glimpse of the impossible conflicts and unchecked power that courses through your body.
-Avantage: Vous pouvez donner aux autres un aperçu des conflits impossibles et de la puissance incontrôlée qui circulent dans votre corps.
+Avantage: Vous apprenez le sort de révélation Dichotomie débilitante.
 
 ------ Description (en) ------
 <p>You can give others a glimpse of the impossible conflicts and unchecked power that courses through your body. You learn the @Compendium[pf2e.spells-srd.VmqdVWCb8zAUCW8S]{Debilitating Dichotomy}<em> </em>revelation spell. Increase the number of Focus Points in your focus pool by 1.</p>
