--- a/data/feats/class-08-jkBzlMB4TS1sS2Fm.htm
+++ b/data/feats/class-08-jkBzlMB4TS1sS2Fm.htm
@@ -1,12 +1,12 @@
 Name: Stunning Finisher
-Nom: Botte étourdissante
+Nom: Coup final étourdissant
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You attempt a dizzying blow.
-Avantage: Vous tentez un coup vertigineux.
+Avantage: Votre Frappe étourdit votre adversaire.
 
 ------ Description (en) ------
 <p>You attempt a dizzying blow. Make a melee @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}. If you hit, your foe must attempt a Fortitude save against your class DC with the following results; the save has the incapacitation trait.</p>
