--- a/data/feats/class-08-F6ZAceuDpiM9bUiF.htm
+++ b/data/feats/class-08-F6ZAceuDpiM9bUiF.htm
@@ -6,13 +6,13 @@ PrereqFR: Esquive agile
 
 ------ Benefits and spoiler ----
 Benefits: You throw yourself into a roll to escape imminent danger.
-Avantage: Vous vous jetez dans une roulade pour échapper à un danger imminent.
+Avantage: Vous pouvez utiliser Esquive agile en cas de jet de Réflexes et une réussite vous permet de Marcher rapidement sur 3 m. 
 
 ------ Description (en) ------
 <p>You can use Nimble Dodge before attempting a Reflex save, in addition to its original trigger. If you do, the circumstance bonus applies to your Reflex save against the triggering effect.</p>
 <p>When you use Nimble Dodge and the triggering attack fails or critically fails, or when you succeed or critically succeed at the saving throw, you can also @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Stride} up to 10 feet as part of the reaction. If you do, the reaction gains the move trait.</p>
 <p>You can use Nimble Roll while @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Flying} or @Compendium[pf2e.actionspf2e.c8TGiZ48ygoSPofx]{Swimming} instead of Striding if you have the corresponding movement type.</p>
 ------ Description (fr) ------
-<p>En plus de son déclencheur originel, vous pouvez utilisez Esquive agile avant d'essayer un jet de Réflexes. Si vous le faites, les bonus de circonstance s'applique à votre jet de Réflexes contre l'effet déclencheur.</p>
+<p>En plus de son déclencheur originel, vous pouvez utilisez Esquive agile avant de tenter un jet de Réflexes. Si vous le faites, le bonus de circonstances s'applique à votre jet de Réflexes contre l'effet déclencheur.</p>
 <p>Lorsque vous utilisez Esquive agile et que l'attaque déclencheuse est un échec ou un échec critique ou lorsque vous obtenez un succès ou un succès critique contre le jet de sauvegarde, vous pouvez aussi @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marcher rapidement} jusqu'à 3 m comme faisant partie de la réaction. Si vous le faites, la réaction obtient le trait déplacement.</p>
 <p>Vous pouvez utiliser Roulade agile lorsque vous @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{Volez} ou @Compendium[pf2e.actionspf2e.c8TGiZ48ygoSPofx]{Nagez} au lieu de Marcher si vous avez les types de déplacements correspondant.</p>
