--- a/data/feats/class-08-FjuuX0vUWlYchRNM.htm
+++ b/data/feats/class-08-FjuuX0vUWlYchRNM.htm
@@ -2,14 +2,13 @@ Name: Inspire Heroics
 Nom: Inspiration héroïque
 PrereqEN: maestro muse
 PrereqFR: muse virtuose|réserve de focalisation
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your performances inspire even greater deeds in your allies.
-Avantage: Vos performances inspirent des actes encore plus grands à vos alliés.
+Avantage: Vous apprenez le sort focalisé de métamagie Inspiration héroïque.
 
 ------ Description (en) ------
 <p>Your performances inspire even greater deeds in your allies. You learn the @Compendium[pf2e.spells-srd.kF0rs9mCPvJGfAZE]{Inspire Heroics} metamagic focus spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vos représentations inspirent vos alliés pour les pousser à accomplir des exploits toujours plus grands. Vous apprenez le sort focalisé de métamagie @Compendium[pf2e.feats-srd.FjuuX0vUWlYchRNM]{inspiration héroïque}. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
+<p>Vos représentations inspirent vos alliés pour les pousser à accomplir des exploits toujours plus grands. Vous apprenez le sort focalisé de métamagie @Compendium[pf2e.feats-srd.FjuuX0vUWlYchRNM]{Inspiration héroïque}. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
