--- a/data/feats/class-08-fFfRsvDavUsTBDF2.htm
+++ b/data/feats/class-08-fFfRsvDavUsTBDF2.htm
@@ -1,12 +1,12 @@
 Name: Martyr
 Nom: Martyr
 PrereqEN: divine font
-PrereqFR: source de guérison
+PrereqFR: source divine
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You go to extreme lengths to support your allies, even when it means bringing harm to yourself.
-Avantage: Vous allez jusqu'au bout pour soutenir vos alliés, même si cela signifie vous faire du mal.
+Avantage: Vous transférez vos points de vie à un de vos alliés en utilisant votre source divine.
 
 ------ Description (en) ------
 <p>You go to extreme lengths to support your allies, even when it means bringing harm to yourself.</p>
