--- a/data/feats/class-08-ffdXSxl4lVFrOvyQ.htm
+++ b/data/feats/class-08-ffdXSxl4lVFrOvyQ.htm
@@ -1,14 +1,14 @@
 Name: Ambushing Knockdown
-Nom: Embuscade assomante
+Nom: Embuscade assommante
 PrereqEN: Ruffian Rogue
 PrereqFR: Trafic de roublard : Voyou
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You emerge from hiding and deliver a blow that can knock an enemy sprawling to the ground.
-Avantage: Vous sortez de votre cachette et donnez un coup qui peut faire tomber un ennemi au sol.
+Avantage: Lorsque vous êtes Caché et parvenez à toucher votre cible avec une arme au corps-à-corps contondante, vous la mettez À terre.
 SpoilersEN: Agents of Edgewatch
-SpoilersFR: 
+SpoilersFR: Agents de la Garde du Précipice
 
 ------ Description (en) ------
 <p><strong>Access</strong> Side with the Washboard Dogs in the gang conflict.<br /><strong>Requirements</strong> You're wielding a melee weapon that deals bludgeoning damage and you're @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} from or @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Undetected} by an enemy.<br /></p>
@@ -18,4 +18,4 @@ SpoilersFR:
 <p><strong>Accès</strong> être aux côtés des Chiens de la laverie dans le conflit entre bandes.</p>
 <p><strong>Conditions</strong> Vous maniez une arme au corps à corps qui inflige des dégâts contondants et et vous êtes @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} ou @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non détecté} par un ennemi.</p>
 <hr />
-<p>Vous sortez de votre cachette et délivrez un coup qui peut envoyez un ennemi s'affaler sur le sol. Vous Marchez rapidement jusqu'à la moitié de votre Vitesse de déplacement, mais vous devez terminer votre déplacement près d'un ennemi dont vous êtes caché ou non détecté. Vous Frappez alors avec l'arme requise ; si vous touchez, la cible est mise @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
+<p>Vous sortez de votre cachette et délivrez un coup qui peut envoyer un ennemi s'affaler sur le sol. Vous Marchez rapidement jusqu'à la moitié de votre Vitesse de déplacement, mais vous devez terminer votre déplacement près d'un ennemi dont vous êtes caché ou non détecté. Vous Frappez alors avec l'arme requise ; si vous touchez, la cible est mise @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre}.</p>
