--- a/data/feats/class-08-jCIBYryi6Y3JwmqH.htm
+++ b/data/feats/class-08-jCIBYryi6Y3JwmqH.htm
@@ -2,14 +2,12 @@ Name: Mixed Maneuver
 Nom: Manœuvre mixte
 PrereqEN: |master in Athletics
 PrereqFR: maître en Athlétisme
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You combine two different maneuvers together into a single flowing whole.
-Avantage: Vous combinez deux manœuvres différentes en un seul ensemble fluide.
------- Benefits and spoiler ----
-Avantage: Vous combinez deux manœuvres différentes en un seul ensemble fluide.
+Avantage: Vous pouvez porter deux attaques de manœuvres simultanément.
+
 ------ Description (en) ------
 <p>You combine two different maneuvers together into a single flowing whole. Choose any two of @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Grapple}, @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Shove}, and @Compendium[pf2e.actionspf2e.ge56Lu1xXVFYUnLP]{Trip}. Attempt both of the attacks you chose against the same or different creatures, but don't apply the multiple attack penalty until after resolving both attacks.</p>
 ------ Description (fr) ------
