dons de classe 08

--- a/data/feats/class-08-LVTquA3DpqCJDika.htm
+++ b/data/feats/class-08-LVTquA3DpqCJDika.htm
@@ -6,7 +6,7 @@ PrereqFR: Odorat aiguisé ou odorat précis ou odorat imprécis
 
 ------ Benefits and spoiler ----
 Benefits: You trust your instincts and your sense of smell, using all of your senses to pinpoint your opponent's location.
-Avantage: Vous faites confiance à votre instinct et à votre odorat, en utilisant tous vos sens pour localiser votre adversaire.
+Avantage: Vous ignorez les tests nus pour Frapper au corps-à-corps un adversaire Masqué ou Caché lorsque vous pouvez le sentir.
 
 ------ Description (en) ------
 <p>You trust your instincts and your sense of smell, using all of your senses to pinpoint your opponent's location.</p>
