--- a/data/feats/class-08-LnSMRHjMArCkE4w1.htm
+++ b/data/feats/class-08-LnSMRHjMArCkE4w1.htm
@@ -2,14 +2,12 @@ Name: Heal Mount
 Nom: Guérison de destrier
 PrereqEN: |divine ally (steed)|devotion spell (lay on hands)
 PrereqFR: allié divin (destrier)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your devotion to your mount manifests as a surge of positive energy.
-Avantage: Votre dévouement à votre monture se manifeste par une poussée d'énergie positive.
------- Benefits and spoiler ----
-Avantage: Votre dévouement à votre monture se manifeste par une poussée d'énergie positive.
+Avantage: Imposition des mains vous permet de mieux soigner votre monture.
+
 ------ Description (en) ------
 <p>Your devotion to your mount manifests as a surge of positive energy.</p>
 <p>When you cast @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} on your mount, you can restore 10 Hit Points, plus 10 for each heightened level.</p>
