--- a/data/feats/class-08-MRxQDZFNPpUKC0CL.htm
+++ b/data/feats/class-08-MRxQDZFNPpUKC0CL.htm
@@ -2,12 +2,11 @@ Name: Surging Focus
 Nom: Focalisation déferlante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: When an ally you can see falls in battle, your fight or flight response triggers a surge in your deity's might within you.
-Avantage: Lorsqu'un allié que vous pouvez voir tombe au combat, votre réaction de combat ou de fuite déclenche une poussée de la puissance de votre divinité en vous.
+Avantage: Une fois par jour, lorsqu'un allié tombe au combat, vous récupérez un point de focalisation.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -18,4 +17,4 @@ Avantage: Lorsqu'un allié que vous pouvez voir tombe au combat, votre réaction
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>déclencheur</strong> Un allié que vous pouvez voir passe à 0 Points de vie.</p>
 <hr />
-<p>Lorsqu'un allié que vous pouvez voir tombe au combat, votre réponse au combat ou au vol déclenche un déferlement du pouvoir de votre divinité en vous. Vous regagnez instantanément 1 Point de focalisation.</p>
+<p>Lorsqu'un allié que vous pouvez voir tombe au combat, cela provoque un déferlement du pouvoir de votre divinité en vous. Vous regagnez instantanément 1 Point de focalisation.</p>
