--- a/data/feats/class-08-l8KQgN8icNrzYIav.htm
+++ b/data/feats/class-08-l8KQgN8icNrzYIav.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You have trained your mind and body to tolerate polymorph magic for longer periods of time, so long as you prepare for the change appropriately.
-Avantage: Vous avez entraîné votre esprit et votre corps à tolérer la magie polymorphe pendant de plus longues périodes, à condition de vous préparer au changement de manière appropriée.
+Avantage: Intensifier un sort de métamorphose de deux niveaux vous permet de passer sa durée à 10 minutes.
 
 ------ Description (en) ------
 <p>You have trained your mind and body to tolerate polymorph magic for longer periods of time, so long as you prepare for the change appropriately.</p>
