--- a/data/feats/class-08-MhoGCLKI5zxQ4SFD.htm
+++ b/data/feats/class-08-MhoGCLKI5zxQ4SFD.htm
@@ -6,7 +6,7 @@ PrereqFR: maître en Discrétion
 
 ------ Benefits and spoiler ----
 Benefits: Stride without triggering reactions
-Avantage: Marcher sans déclencher de réactions
+Avantage: Au début d'une rencontre, vous pouvez Marcher rapidement sans provoquer de réaction.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You rolled Stealth for initiative in this <br />encounter, and neither you nor any enemies have acted yet <br />in this encounter.</p>
@@ -15,4 +15,4 @@ Avantage: Marcher sans déclencher de réactions
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous avez lancé Discrétion pour déterminer l'initiative pour cette rencontre et ni vous, ni vos ennemis n'avez encore agi lors de cette rencontre.</p>
 <hr />
-<p>Vous @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez précipitamment}. Ce déplacement ne déclenche aucune réaction.</p>
+<p>Vous @Compendium[pf2e.actionspf2e.Bcxarzksqt9ezrs6]{Marchez rapidement}. Ce déplacement ne déclenche aucune réaction.</p>
