--- a/data/feats/class-08-mf2cdCRV8uowOMOm.htm
+++ b/data/feats/class-08-mf2cdCRV8uowOMOm.htm
@@ -2,12 +2,11 @@ Name: Dueling Riposte
 Nom: Riposte en duel
 PrereqEN: Dueling Parry
 PrereqFR: Parade en duel
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You riposte against your flailing enemy.
-Avantage: Vous ripostez contre votre ennemi qui s'agite.
+Avantage: En cas d'échec critique, vous pouvez tenter de Désarmer votre adversaire ou le Frapper.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your reach critically fails a Strike against you.</p>
@@ -18,4 +17,4 @@ Avantage: Vous ripostez contre votre ennemi qui s'agite.
 <p><strong>Déclencheur</strong> Une créature à portée obtient un échec critique en effectuant une Frappe contre vous.</p>
 <p><strong>Conditions</strong> Vous bénéficiez des avantages de Parade en duel.</p>
 <hr />
-<p>Vous ripostez contre la créature qui a échoué. Effectuez une Frappe au corps à corps ou tenter de Désarmer la créature à l’origine du déclenchement.</p>
+<p>Vous ripostez contre la créature qui a échoué. Effectuez une Frappe au corps à corps ou tenter de @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer} la créature à l’origine du déclenchement.</p>
