dons de classe 08

--- a/data/feats/class-08-PP1gfRCc1YwnQGxp.htm
+++ b/data/feats/class-08-PP1gfRCc1YwnQGxp.htm
@@ -1,12 +1,12 @@
 Name: Dual Finisher
-Nom: Botte duale
+Nom: Coup final dual
 PrereqEN: 
 PrereqFR: 
 État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You split your attacks.
-Avantage: Vous divisez vos attaques.
+Avantage: Vous Frappez deux adversaires différents avec deux armes différentes sans pénalité d'attaque multiple ou une pénalité réduite.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You wield two melee weapons, one in each hand.</p>
@@ -16,5 +16,5 @@ Avantage: Vous divisez vos attaques.
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez deux armes de corps à corps, une dans chaque main.</p>
 <hr />
-<p>Vous divisez vos attaques. Faites deux @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} de corps à corps, une avec chaque arme requise, chaque contre un adversaire différent. Si la seconde Frappe est portée avec une arme non-agile, elle subit une pénalité de –2.</p>
+<p>Vous divisez vos attaques. Faites deux @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappes} de corps à corps, une avec chaque arme requise, chacune contre un adversaire différent. Si la seconde Frappe est portée avec une arme non-agile, elle subit une pénalité de –2.</p>
 <p>Augmentez votre pénalité d'attaques multiples seulement après avoir effectué les deux Frappes.</p>
