--- a/data/feats/class-08-PuyvasWeofGMrhpu.htm
+++ b/data/feats/class-08-PuyvasWeofGMrhpu.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: When your enemy is hit by your ally, you capitalize upon the distraction.
-Avantage: Quand votre ennemi est touché par votre allié, vous profitez de la distraction.
+Avantage: La Frappe réussie de votre allié vous permet de porter une Frappe en réaction.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your melee reach is hit by a melee attack from one of your allies</p>
