--- a/data/feats/class-08-oTTddwzF9TPNkMyd.htm
+++ b/data/feats/class-08-oTTddwzF9TPNkMyd.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You use your performances to supplement an ally's spellcasting, providing magical energy for their spells.
-Avantage: Vous utilisez vos performances pour compléter les sorts d'un allié, en fournissant de l'énergie magique pour ses sorts.
+Avantage: Vous pouvez sacrifier un Point de focalisation ou un emplacement de sort au profit de l'incantation d'un allié.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally within 30 feet @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Casts a Spell}.</p>
@@ -16,5 +16,5 @@ Avantage: Vous utilisez vos performances pour compléter les sorts d'un allié, 
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Un allié dans les 9 m @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lance un sort}.</p>
 <hr />
-<p>Vous utilisez vos représentations pour compléter l'incantation des sorts d'un allié, lui procurant l'énergie magique pour ses sorts.</p>
-<p>Faites un test de Représentation, en utilisant un DD très élevé pour du niveau de l'allié et soit vous dépensez un Point de focalisation (si le sort déclencheur est un sort de focalisation) soit vous dépensez un emplacement de sort d'au moins 1 niveau plus élevé que le sort déclencheur. Si vous réussissez le test de Représentation, le sort de votre allié ne lui coûte pas le Point de focalisation ou l'emplacement du sort.</p>
+<p>Vous utilisez vos représentations pour compléter l'incantation des sorts d'un allié, lui fournissant l'énergie magique pour ses sorts.</p>
+<p>Faites un test de Représentation, en utilisant un DD très élevé pour le niveau de l'allié et soit vous dépensez un Point de focalisation (si le sort déclencheur est un sort de focalisation) soit vous dépensez un emplacement de sort d'au moins 1 niveau plus élevé que le sort déclencheur. Si vous réussissez le test de Représentation, le sort de votre allié ne lui coûte pas le Point de focalisation ou l'emplacement du sort.</p>
