--- a/data/feats/class-08-qgW8uHJXJGl3DKBS.htm
+++ b/data/feats/class-08-qgW8uHJXJGl3DKBS.htm
@@ -6,7 +6,7 @@ PrereqFR: Compagnon animal adulte
 
 ------ Benefits and spoiler ----
 Benefits: Your animal companion continues to grow and develop.
-Avantage: Votre compagnon animal continue de grandir et de se développer.
+Avantage: Votre compagnon animal devient sauvage ou agile.
 
 ------ Description (en) ------
 <p>Your animal companion continues to grow and develop. It becomes a nimble or savage animal companion (your choice), gaining additional capabilities determined by the type of companion (page 214).</p>
