--- a/data/feats/class-08-Mvay7CiSN8snJ7DK.htm
+++ b/data/feats/class-08-Mvay7CiSN8snJ7DK.htm
@@ -6,7 +6,7 @@ PrereqFR: Infusions perpétuelles
 
 ------ Benefits and spoiler ----
 Benefits: You have expanded your supply of near-infinite items.
-Avantage: Vous avez augmenté votre stock d'articles quasi illimités.
+Avantage: Vous ajoutez un ou deux objets d'un Domaine de recherches à la liste d'objets que vous pouvez produire avec infusions perpétuelles.
 
 ------ Description (en) ------
 <p>You have expanded your supply of near-infinite items. Choose a research field. Add one item from the list of options available to that field from perpetual infusions, or two items if you choose your own field.</p>
@@ -14,4 +14,4 @@ Avantage: Vous avez augmenté votre stock d'articles quasi illimités.
 ------ Description (fr) ------
 <p>Vous avez étendu votre approvisonnement d'objets quasiment à l'infini.</p>
 <p>Choisissez un Domaine de recherche. Ajoutez un objet de la liste des options disponibles pour ce domaine de recherche issu d'infusions perpétuelles ou deux objets si vous choisissez votre propre domaine.</p>
-<p>Si vous possédez @Compendium[pf2e.classfeatures.JOdbVu14phvdjhaY]{Puissance perpétuelle} ou @Compendium[pf2e.classfeatures.3R19zS7gERhEX87F]{Perfection perpétuelle}, vous obtenez un objet supplémentaire (ou objets si vous choisissez votre propre domaine) approprié pour le domaine que vous avez choisi, par exemple une version de plus haut niveau de la  bombe que vous avez choisi ou un nouveau poison.</p>
+<p>Si vous possédez @Compendium[pf2e.classfeatures.JOdbVu14phvdjhaY]{Puissance perpétuelle} ou @Compendium[pf2e.classfeatures.3R19zS7gERhEX87F]{Perfection perpétuelle}, vous obtenez un objet supplémentaire (ou objets si vous choisissez votre propre domaine) approprié pour le domaine que vous avez choisi, par exemple une version de plus haut niveau de la bombe que vous avez choisi ou un nouveau poison.</p>
