--- a/data/feats/class-08-nEmaHLsZEBru1Jjv.htm
+++ b/data/feats/class-08-nEmaHLsZEBru1Jjv.htm
@@ -6,7 +6,7 @@ PrereqFR: Combattant (Muse de barde)
 
 ------ Benefits and spoiler ----
 Benefits: You bellow a ferocious call to arms, inspiring yourself to lash out at a foe.
-Avantage: Vous hurlez un appel féroce aux armes, vous inspirant pour frapper un ennemi.
+Avantage: Inspiration vaillante vous permet de réagir à certaines actions de votre cible pour tenter de l'interrompre.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your reach uses an auditory effect, manipulate action, or move action; makes a ranged attack; or leaves a square during its move action.</p>
@@ -17,4 +17,4 @@ Avantage: Vous hurlez un appel féroce aux armes, vous inspirant pour frapper un
 <p><strong>Déclencheur</strong> Une créature à votre portée utilise un effet audible, une action de manipulation ou une action de déplacement ; fait une attaque à distance ; ou quitte une case durant son action de déplacement.</p>
 <p><strong>Conditions</strong> Vous êtes affecté par @Compendium[pf2e.spells-srd.IAjvwqgiDr3qGYxY]{Inspiration vaillante}.</p>
 <hr />
-<p>Vous beuglez un appel aux armes féroce, vous donnant l'inspiration pour vous lâcher contre un adversaire. Faites une Frappe au corps-à-corps contre la créature déclencheuse. Si l'attaque est un coup critique et que le déclencheur était une action de manipulation, l'action est interrompue.</p>
+<p>Vous beuglez un appel aux armes féroce, vous donnant l'inspiration pour vous défouler contre un adversaire. Faites une Frappe au corps-à-corps contre la créature déclencheuse. Si l'attaque est un coup critique et que le déclencheur était une action de manipulation, l'action est interrompue.</p>
