--- a/data/feats/class-08-nL82Dzh0QwkNkJDA.htm
+++ b/data/feats/class-08-nL82Dzh0QwkNkJDA.htm
@@ -6,9 +6,9 @@ PrereqFR: qualifié en Athlétisme
 
 ------ Benefits and spoiler ----
 Benefits: You attack with enough force to knock the weapon out of your foe's hands.
-Avantage: Vous attaquez avec suffisamment de force pour faire tomber l'arme des mains de votre adversaire.
+Avantage: Une Frappe au corps-à-corps réussie vous permet de tenter de Désarmer votre adversaire.
 
 ------ Description (en) ------
 <p>You attack with enough force to knock the weapon out of your foe's hands. Make a melee @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}; if you hit, you can attempt an Athletics check to @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Disarm} that foe.</p>
 ------ Description (fr) ------
-<p>Vous attaquez avec suffisamment de force pour arracher l'arme des mains de votre adversaire. Faites une Frappe au corps-à-corps ; si vous touchez, vous pouves effectuer un test d'Athlétisme pour @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer} cet adversaire.</p>
+<p>Vous attaquez avec suffisamment de force pour arracher l'arme des mains de votre adversaire. Faites une Frappe au corps-à-corps ; si vous touchez, vous pouvez effectuer un test d'Athlétisme pour @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer} cet adversaire.</p>
