--- a/data/feats/class-08-nLTTph2tgwcQghVq.htm
+++ b/data/feats/class-08-nLTTph2tgwcQghVq.htm
@@ -2,14 +2,13 @@ Name: Cremate Undead
 Nom: Incinération de morts-vivants
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your positive energy sets undead alight.
-Avantage: Votre énergie positive enflamme les morts-vivants.
+Avantage: Guérison contre desmorts vivants ajoute des dégâts de feu persistants.
 
 ------ Description (en) ------
 <p>Your positive energy sets undead alight. When you use a @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell to damage undead, each undead that takes damage also takes persistent fire damage equal to the spell's level.</p>
 ------ Description (fr) ------
-<p>Votre énergie positive embrase les morts-vivants. Quand vous utilisez une guérison pour blesser des morts-vivants, chacune de ces créatures qui subit des dégâts subit également un montant de dégâts de feu persistants égal au niveau du sort.</p>
+<p>Votre énergie positive embrase les morts-vivants. Quand vous utilisez Guérison pour blesser des morts-vivants, chacune de ces créatures qui subit des dégâts subit également un montant de dégâts de feu persistants égal au niveau du sort.</p>
