--- a/data/feats/class-08-oEjRfI4ATIFxDCzL.htm
+++ b/data/feats/class-08-oEjRfI4ATIFxDCzL.htm
@@ -6,7 +6,7 @@ PrereqFR: Chaudron
 
 ------ Benefits and spoiler ----
 Benefits: You spend 10 minutes and 1 Focus Point brewing a special potion containing the power of one of your hexes that targets a creature.
-Avantage: Vous dépensez 10 minutes et 1 point de focalisation pour préparer une potion spéciale contenant le pouvoir de l'une de vos hexagones qui cible une créature.
+Avantage: Vous pouvez mettre un maléfice dans une potion.
 
 ------ Description (en) ------
 <p>You spend 10 minutes and 1 Focus Point brewing a special potion containing the power of one of your hexes that targets a creature. A creature that consumes this potion is targeted by the hex.</p>
@@ -15,4 +15,4 @@ Avantage: Vous dépensez 10 minutes et 1 point de focalisation pour préparer un
 ------ Description (fr) ------
 <p>Vous passez 10 minutes et dépensez 1 Point de focalisation pour brasser une potion spéciale contenant la puissance d'un de vos maléfices qui cible une créature. Une créature qui consomme cette potion est ciblée par le maléfice.</p>
 <p>Si le maléfice a une durée maintenue et que vous possédez @Compendium[pf2e.spells-srd.YVK3JUkPVzHIeGXQ]{Gloussement}, vous pouvez lancer Gloussement dans la bouteille juste avant de la sceller. Si vous le faites, la durée du maléfice est étendue comme si vous aviez lancé Gloussement le round qui suit le lancement du sort (typiquement, cela étend la durée d'un round). Votre gloussement se fait entendre lorsque la bouteille est débouchée.</p>
-<p>Toute potion que vous créez de cette manière perd son pouvoir lors de vos prochains préparatifs quotidiens. tant que la potion est en votre possession, vous pouvez la rendre inerte en utilisant une unique action qui a le trait concentration. Vous ne pouvez récupérer me Point de focalisation que vous avez dépensé en créant la potion (ou le Point de focalisation que vous avez dépensé pour lancer Gloussement) jusqu'à ce que la potion soit consommée ou ait perdu sa magie.</p>
+<p>Toute potion que vous créez de cette manière perd son pouvoir lors de vos prochains préparatifs quotidiens. tant que la potion est en votre possession, vous pouvez la rendre inerte en utilisant une unique action qui a le trait concentration. Vous ne pouvez récupérer le Point de focalisation que vous avez dépensé en créant la potion (ou le Point de focalisation que vous avez dépensé pour lancer Gloussement) jusqu'à ce que la potion soit consommée ou ait perdu sa magie.</p>
