--- a/data/feats/class-08-oHra9QanDFpAZ4hh.htm
+++ b/data/feats/class-08-oHra9QanDFpAZ4hh.htm
@@ -2,14 +2,12 @@ Name: Warden's Boon
 Nom: Aide du protecteur
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: By pointing out vulnerabilities, you grant an ally benefits from your hunting abilities.
-Avantage: En soulignant les vulnérabilités, vous accordez à un allié les avantages de vos capacités de chasse.
------- Benefits and spoiler ----
-Avantage: En soulignant les vulnérabilités, vous accordez à un allié les avantages de vos capacités de chasse.
+Avantage: Vous partagez durant un round les avantages de Chasser une proie et de votre Spécialité du chasseur avec un allié.
+
 ------ Description (en) ------
 <p>By pointing out vulnerabilities, you grant the benefits listed in @Compendium[pf2e.actionspf2e.JYi4MnsdFu618hPm]{Hunt Prey} and your@Compendium[pf2e.classfeatures.mzkkj9LEWjJPBhaq]{Hunter's Edge} benefit to an ally until the end of their next turn. Depending on whether you call out or use gestures, this action gains either the auditory or visual trait.</p>
 <ul>
@@ -18,4 +16,9 @@ Avantage: En soulignant les vulnérabilités, vous accordez à un allié les ava
 <li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effect: Hunter's Edge, Precision}</li>
 </ul>
 ------ Description (fr) ------
-<p>Jusqu’à la fin de votre prochain tour, vous conférez à un allié les avantages décrits dans Chasser une proie et ceux de votre spécialité du chasseur en lui indiquant les vulnérabilités d’une créature. En fonction de la manière utilisée pour transmettre ces informations à votre allié (des gestes ou la voix), cette action possède le trait visuel ou audible.</p>
+<p>Jusqu’à la fin de votre prochain tour, vous conférez à un allié les avantages décrits dans Chasser une proie et ceux de votre Spécialité du chasseur en lui indiquant les vulnérabilités d’une créature. En fonction de la manière utilisée pour transmettre ces informations à votre allié (des gestes ou la voix), cette action possède le trait visuel ou audible.</p>
+<ul>
+<li>@Compendium[pf2e.feat-effects.uXCU8GgriUjuj5FV]{Effet: Spécialité du chasseur, Déluge}</li>
+<li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effet: Spécialité du chasseur Précision}</li>
+<li>@Compendium[pf2e.feat-effects.ltIvO9ZQlmqGD89Y]{Effet: Spécialité du chasseur, Ruse}</li>
+</ul>
