--- a/data/feats/class-08-pRqcm5P2ZFihSpVI.htm
+++ b/data/feats/class-08-pRqcm5P2ZFihSpVI.htm
@@ -2,12 +2,11 @@ Name: Quick Shield Block
 Nom: Blocage au bouclier éclair
 PrereqEN: shield block|Reactive Shield
 PrereqFR: blocage au bouclier|bouclier réactif
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can bring your shield into place with hardly a thought.
-Avantage: Vous pouvez mettre votre bouclier en place en un clin d'œil.
+Avantage: Vous obtenez une réaction supplémentaire pour un Blocage au bouclier.
 
 ------ Description (en) ------
 <p>You can bring your shield into place with hardly a thought. At the start of each of your turns, you gain an additional reaction that you can use only to @Compendium[pf2e.feats-srd.jM72TjJ965jocBV8]{Shield Block}.</p>
