--- a/data/feats/class-20-YbneCzvDEr76mrsS.htm
+++ b/data/feats/class-20-YbneCzvDEr76mrsS.htm
@@ -10,7 +10,7 @@ PrereqFR:
 <hr />
 <p><em>Note: this version of the feat grants darkvision automatically.</em></p>
 ------ Description (fr) ------
-<p>Vos sens sont sans égal. Vous gagnez un bonus de circonstances de +2 aux tests de Perception, et vous gagnez une vision en basse lumière. Si vous avez déjà une vision à faible luminosité, gagnez la vision dans le noir à la place.</p>
-<p>De plus, lorsque vous ciblez un ennemi, vous réussissez automatiquement le test de mise à plat si cet ennemi est @Compendium[pf2e.conditionitems. DmAIPqOBomZ7H95W]{Caché}, @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché}, ou @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Détecté}.</p>
+<p>Vos sens sont sans égal. Vous gagnez un bonus de circonstances de +2 aux tests de Perception et vous gagnez vision nocturne. Si vous avez déjà Vision nocturne, vous obtenez Vision dans le noir à la place.</p>
+<p>De plus, lorsque vous ciblez un ennemi, vous réussissez automatiquement le test nu si cet ennemi est @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué}, @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} ou @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non détecté}.</p>
 <hr />
-Note : cette version de l'exploit accorde automatiquement la vision dans le noir.</em></p>
+<p><em>Note : cette version du don accorde automatiquement la vision dans le noir.</em></p>
