Dons de classe 08

--- a/data/feats/class-08-rKZE8BA9IQHSSWoW.htm
+++ b/data/feats/class-08-rKZE8BA9IQHSSWoW.htm
@@ -2,12 +2,11 @@ Name: Emblazon Energy
 Nom: Énergie blasonnée
 PrereqEN: Emblazon Armament
 PrereqFR: Arsenal blasonné
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: With elemental forces, you make your emblazoned symbols more potent.
-Avantage: Avec les forces élémentaires, vous rendez vos symboles plus puissants.
+Avantage: Vous pouvez utiliser Arsenal blasonné pour infliger un type de dégâts d'énergie ou y résister.
 
 ------ Description (en) ------
 <p>With elemental forces, you make your emblazoned symbols more potent. When you Emblazon an Armament, you can choose from the following effects instead of the effects listed in that feat. These effects have the same restrictions as the base options.</p>
@@ -18,6 +17,6 @@ Avantage: Avec les forces élémentaires, vous rendez vos symboles plus puissant
 ------ Description (fr) ------
 <p>Vous augmentez la puissance des symboles que vous blasonnez avec des forces élémentaires. Quand vous utilisez Arsenal blasonné, vous pouvez choisir l’un des effets suivants au lieu de ceux de ce don. Ces effets imposent les mêmes restrictions que les options de base.</p>
 <ul>
-<li><strong>Arme</strong> Choisissez l’acide, l’électricité, le feu, le froid ou le son. L’arme inflige 1d4 dégâts supplémentaires de ce type. Ces dégâts passent à 1d6 si vous avez un sort de domaine avec un trait correspondant à ce type (feu, par exemple).</li>
+<li><strong>Arme</strong> Choisissez @Compendium[pf2e.feat-effects.x4Sb3qaMJo8x1r3X]{acide}, @Compendium[pf2e.feat-effects.5TzKmEqFyLHBG2ua]{froid}, @Compendium[pf2e.feat-effects.oX51Db6IxnUI64dT]{électricité}, @Compendium[pf2e.feat-effects.GCEOngH5zL0rRyle]{feu} ou @Compendium[pf2e.feat-effects.2c30Drdg84bWLcRn]{son}. L’arme inflige 1d4 dégâts supplémentaires de ce type. Ces dégâts passent à 1d6 si vous avez un sort de domaine avec un trait correspondant à ce type (feu, par exemple).</li>
 <li><strong>Bouclier</strong> Choisissez l’acide, l’électricité, le feu, le froid ou le son. Le porteur du bouclier bénéficie du bonus de circonstances du bouclier à ses jets de sauvegarde contre ce type de dégâts et peut effectuer un Blocage au bouclier contre les dégâts de ce type. Le bouclier gagne également une résistance contre ce type de dégâts égale à la moitié de votre niveau si vous avez un sort de domaine avec un trait correspondant à ce type (feu, par exemple).</li>
 </ul>
