--- a/data/feats/class-08-rMPL11JRcmlutvRi.htm
+++ b/data/feats/class-08-rMPL11JRcmlutvRi.htm
@@ -2,18 +2,17 @@ Name: Thrash
 Nom: Maltraitance
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You thrash the grabbed foe around.
-Avantage: Tu frappes l'ennemi saisi.
+Avantage: L'ennemi empoigné subit des dégâts fixes.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have a foe @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed}</p>
 <hr />
 <p>You thrash the grabbed foe around. It takes bludgeoning damage equal to your Strength modifier plus your weapon specialization damage plus your Rage damage. The foe must attempt a basic Fortitude save against your class DC.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous avez empoigné un ennemi</p>
+<p><strong>Conditions</strong> Vous avez @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{empoigné} un ennemi</p>
 <hr />
-<p>Vous traînez l’ennemi empoigné avec vous. Il subit une quantité de dégâts contondants égale à votre modificateur de Force plus vos dégâts de spécialisation martiale plus vos dégâts de Rage. L’ennemi peut tenter un jet de sauvegarde de Vigueur basique contre votre DD de classe.</p>
+<p>Vous frappez l’ennemi que vous avez empoigné. Il subit une quantité de dégâts contondants égale à votre modificateur de Force plus vos dégâts de Spécialisation martiale plus vos dégâts de Rage. L’ennemi doit faire un jet de Vigueur basique contre votre DD de classe.</p>
