--- a/data/feats/class-08-TEH73yqZBqByO624.htm
+++ b/data/feats/class-08-TEH73yqZBqByO624.htm
@@ -2,12 +2,11 @@ Name: Positioning Assault
 Nom: Assaut de positionnement
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: With punishing blows, you force your opponent into position.
-Avantage: Avec des coups de poing, vous forcez votre adversaire à se mettre en position.
+Avantage: Une Frappe réussie vous permet de forcer votre adversaire à se déplacer autour de vous.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a two-handed melee weapon and your target is within your reach</p>
